--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "commander": "^2.9.0",
     "mathjs": "^3.4.1",
     "request": "^2.74.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "sqlite3": "^3.1.4"
   }
 }
