--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mathjs": "^3.4.1",
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
+    "sprintf-js": "^1.0.3",
     "sqlite3": "^3.1.4"
   }
 }
