--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "author": "ntblack",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^3.0.2"
+    "mocha": "3.0.2"
   },
   "dependencies": {
-    "commander": "^2.9.0",
-    "mathjs": "^3.4.1",
-    "request": "^2.74.0",
-    "request-promise": "^4.1.1",
-    "sprintf-js": "^1.0.3",
-    "sqlite3": "^3.1.4"
+    "commander": "2.9.0",
+    "lodash-fp": "0.10.4",
+    "mathjs": "3.4.1",
+    "request": "2.74.0",
+    "request-promise": "4.1.1",
+    "sprintf-js": "1.0.3",
+    "sqlite3": "3.1.4"
   }
 }
